# focbox_unity_diff_driver

./: API.md  CMakeLists.txt  README.md  package.xml
config/: control.yaml  focbox_unity_driver_config.yaml
docs/: Relatrio_walker.docx
include/focbox_unity_controller/: focbox_unity_controller.h
include/focbox_unity_driver/: datatypes.h  focbox_unity_driver.h  focbox_unity_interface.h  focbox_unity_packer.h  focbox_unity_packet.h
launch/: focbox_unity_controller.launch  focbox_unity_driver_node.launch  focbox_unity_driver_nodelet.launch
src/: focbox_unity_controller.cpp  focbox_unity_controller_node.cpp  focbox_unity_driver.cpp  focbox_unity_driver_node.cpp  focbox_unity_interface.cpp  focbox_unity_packer.cpp  focbox_unity_packet.cpp
vesc_ackermann/: CMakeLists.txt  package.xml  vesc_ackermann_nodelet.xml
vesc_ackermann/include/vesc_ackermann/: ackermann_to_vesc.h  vesc_to_odom.h
vesc_ackermann/launch/: ackermann_to_vesc_node.launch  ackermann_to_vesc_nodelet.launch  vesc_to_odom_node.launch  vesc_to_odom_nodelet.launch
vesc_ackermann/src/: ackermann_to_vesc.cpp  ackermann_to_vesc_nodelet.cpp  vesc_to_odom.cpp  vesc_to_odom_nodelet.cpp
