<?xml version="1.0"?>
<package>
  <name>focbox_unity_controller</name>
  <version>0.0.1</version>
  <description>
    ROS controller configuration for the  FOCBOX Unity motor driver.
  </description>

  <maintainer email="silvagracarafael@gmail.com">Rafael Silva</maintainer>
  <author email="silvagracarafael@gmail.com">Rafael Silva</author>
  <license>MIT</license>

  <url type="website">http://www.ros.org/wiki</url>
  <url type="repository">https://github.com/gimbas/</url>
  <url type="bugtracker">https://github.com/gimbas//issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nodelet</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>focbox_unity_msgs</build_depend>
  <build_depend>effort_controllers</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>focbox_unity_msgs</run_depend>
  <run_depend>effort_controllers</run_depend>

</package>
