<?xml version="1.0"?>
<package>
  <name>focbox_unity_driver</name>
  <version>0.0.1</version>
  <description>
    ROS device driver for the  FOCBOX Unity motor driver.
  </description>

  <maintainer email="silvagracarafael@gmail.com">Rafael Silva</maintainer>
  <author email="silvagracarafael@gmail.com">Rafael Silva</author>
  <license>MIT</license>

  <url type="website">http://www.ros.org/wiki</url>
  <url type="repository">https://github.com/gimbas/focbox_unity_ros_driver</url>
  <url type="bugtracker">https://github.com/gimbas/focbox_unity_ros_driver/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>effort_controllers</build_depend>

  <run_depend>roslaunch</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>effort_controllers</run_depend>

  <export>
    <nodelet plugin="${prefix}/focbox_unity_driver_nodelet.xml"/>
  </export>

</package>
