<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>focbox_unity_driver</name>
  <version>0.0.2</version>
  <description>
    ROS2 device driver for the  FOCBOX Unity motor driver.
  </description>

  <license>MIT</license>

  <url type="website">http://www.ros.org</url>
  <url type="repository">https://github.com/Ab-Tx/focbox_unity_diff_driver</url>
  <maintainer email="user@todo.todo">user</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>roslaunch</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>serial</depend>
  <depend>controller_manager</depend>

  <depend>hardware_interface</depend>
  <depend>joint_command_interface</depend>
  <depend>pluginlib</depend>
  <depend>control_msgs</depend>
  
  <depend>effort_controllers</depend>

  <!-- <exec_depend>roslaunch</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>effort_controllers</exec_depend> -->

  <export>
    <nodelet plugin="${prefix}/focbox_unity_driver_nodelet.xml"/>
    <build_type>ament_cmake</build_type> <!-- ros2 -->
  </export>

</package>
