<?xml version="1.0"?>
<package>
  <name>vesc_ackermann</name>
  <version>0.0.1</version>
  <description>
    Translate betweenFOCBOX Unitymessages and ROS ackermann and odometry messages.
  </description>

  <maintainer email="silvagracarafael@gmail.com">Rafael Silva</maintainer>
  <author email="silvagracarafael@gmail.com">Rafael Silva</author>
  <license>MIT</license>

  <url type="website">http://www.ros.org/wiki/vesc_ackermann</url>
  <url type="repository">https://github.mit.edu/racecar/racecar-iap</url>
  <url type="bugtracker">https://github.mit.edu/racecar/racecar-iap/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>focbox_unity_msgs</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>focbox_unity_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/vesc_ackermann_nodelet.xml"/>
  </export>

</package>
